# olec

./: .gitignore  .gitmodules  LICENSE  Makefile  olec.cabal  stack.yaml
cbits/: bindings.c  extern.c
ext/: class.lua  entry.lua  gtk-wrapper.c  terminal.c  util.lua
ext/js/: app.js  editor.js  entry.js  keymap.js  keys.js  layout.js  test.js
lib/: aux.h  chunklist.c  chunklist.h  layout.c  layout.h  log.c  log.h  rect.c  rect.h  session.c  session.h  tokenizer.c  tokenizer.h  window.c  window.h
lib/term/: layout.c  layout.h  rect.c  rect.h  session.c  session.h  window.c  window.h
lib/term/views/: editor.c  editor.h  mainview.c  mainview.h
lib/text/: chunk.c  chunk.h  chunklist.c  line.c  line.h  tokenizer.c
src/: Main.hs  anchor.cc  anchor.h  app.cc  app.h  child.c  child.h  clip.cpp  clip.hpp  common.cpp  common.hpp  curses.h  editor.c  editor.h  editorview.c  editorview.h  event.c  event.h  events.cc  events.h  example.olec  interface.cpp  interface.hpp  ipc.cc  ipc.h  keymap.c  keymap.cc  keymap.h  keys.cpp  keys.hpp  main.c  main.cc  main.cpp  mainframe.c  mainframe.h  olec.c  olec.h  parent.c  parent.h  termbox.cpp  (+11 more)
src/Control/Concurrent/: MFocus.hs
src/Control/Concurrent/STM/: TFocus.hs
src/Data/: Handle.hs  Metrics.hs
src/Olec/: Application.hs  BoxManager.hs  Color.hs  Component.hs  Config.hs  Editor.hs  Events.hs  IOProxy.hs  Input.hs  Interface.hs  Layout.hs  Main.hs  Provider.hs  Render.hs  Runtime.hs  Terminal.hs  Util.hs  Visual.hs  Window.hs
src/Olec/Auxiliary/: IOProxy.hs  Metrics.hs
src/Olec/Components/: Layouts.hs  StatusBar.hs
src/Olec/Editor/: Cursor.hs  Line.hs  Row.hs
src/Olec/Event/: Keys.hs
src/Olec/Interface/: Component.hs  Display.hs  Events.hs  GTK.hs  Image.hs  Layout.hs  Pango.hs  Renderer.hs  Slot.hs  Terminal.hs  Types.hs  VTE.hs  Widget.hs  Widgets.hs
src/Olec/Layout/: Pane.hs  Split.hs
src/Olec/Terminal/: Actions.hs  Bindings.hs  Input.hs  Layout.hs  Provider.hs  Window.hs
src/Olec/Visual/: CairoIR.hs  Image.hs  Layout.hs  Slot.hs  Types.hs  VT100.hs  Widget.hs
src/for-later/: termbox.cpp  termbox.hpp  util.cpp  util.hpp
src/js/: args.h  exc.h  js.h  objtpls.h  script.h  tpls.h  types.h  vm.cc  vm.h
src/utils/: validity.cpp  validity.hpp
test/: example.olec  main.c
