name:                olec
version:             0.0.1
synopsis:            Text editor
description:         Text editor
license:             GPL-2
license-file:        LICENSE
author:              Ole Krüger
maintainer:          ole@vprsm.de
copyright:           Copyright (c) Ole Krüger 2015
category:            Editor
build-type:          Simple
cabal-version:       >= 1.10

executable olec
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -j -Wall -fprof-auto -threaded
                       -fno-warn-missing-signatures -fno-warn-unused-do-bind -fno-warn-tabs
  default-language:    Haskell2010
  build-depends:       base, gtk3, glib, unix, mtl
  include-dirs:        /usr/include/vte-2.91
  extra-libraries:     vte-2.91 pango-1.0
  cc-options:          -std=c99 -O2 -fmessage-length=0
                       -Wall -Wextra -Wno-unused-parameter
                       -pthread -D_DEFAULT_SOURCE
  c-sources:           cbits/extern.c
