name:                olec
version:             0.0.0
synopsis:            Text editor
description:         Text editor
license:             GPL-2
license-file:        LICENSE
author:              Ole Krüger
maintainer:          ole@vprsm.de
copyright:           Copyright (c) Ole Krüger 2015
category:            Editor
build-type:          Simple
cabal-version:       >= 1.10

executable olec
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -O2 -j -Wall -fprof-auto -threaded
                       -fno-warn-unused-do-bind -fno-warn-tabs
  default-language:    Haskell2010
  build-depends:       base        >= 4.8  && < 5,
                       gtk3        >= 0.13 && < 1,
                       glib        >= 0.13 && < 1,
                       mtl         >= 2.2  && < 3,
                       text        >= 1.2  && < 2,
                       bytestring  >= 0.10 && < 1,
                       utf8-string >= 1    && < 2,
                       vty         >= 5.2  && < 6,
                       time        >= 1.5  && < 2,
                       random      >= 1.1  && < 2
  include-dirs:        /usr/include/vte-2.91
  extra-libraries:     vte-2.91 pango-1.0
  cc-options:          -std=c99 -O2 -fmessage-length=0 -fPIC
                       -Wall -Wextra -Wno-unused-parameter
                       -pthread -D_DEFAULT_SOURCE
  c-sources:           cbits/extern.c
