name:                olec
version:             0.0.0
synopsis:            Text Editor
description:         Text Editor
license:             GPL-2
license-file:        LICENSE
author:              Ole Krüger
maintainer:          ole@vprsm.de
copyright:           Copyright (c) Ole Krüger 2015
category:            Editor
build-type:          Simple
cabal-version:       >= 1.10

executable olec
  hs-source-dirs:   src
  main-is:          Main.hs
  ghc-options:      -Wall -fprof-auto -fno-warn-unused-do-bind -fno-warn-tabs
  default-language: Haskell2010
  build-depends:    base
